# qubic-realtime

./: .env.example  .gitignore  ALL_FIXED.md  CONTRIBUTING.md  DEPLOYMENT_TODAY.md  FEATURES.md  IMPLEMENTATION_STATUS.md  MONOREPO_GUIDE.md  Makefile  README.md  check-ports.sh  start.sh  stop.sh
infrastructure/: docker-compose.dev.yml  docker-compose.yml  prometheus.yml
services/turboauth/: README.md
services/turboauth/api/proto/: auth.proto
services/turboauth/backend/: Dockerfile  go.mod  go.sum
services/turboauth/backend/api/proto/: auth.pb.go  auth_grpc.pb.go
services/turboauth/backend/api/proto/api/proto/: auth.pb.go
services/turboauth/backend/cmd/api/: main.go
services/turboauth/backend/internal/adapters/primary/grpc/: server.go
services/turboauth/backend/internal/domain/auth/: models.go  models_extended.go  ports.go  ports_extended.go  service.go  service_extended.go
services/turboauth/backend/internal/ports/: qubic_port.go  trust_store_port.go  wallet_port.go
services/turboauth/backend/pkg/config/: config.go
services/turboauth/backend/pkg/logger/: logger.go
services/turboauth/backend/pkg/metrics/: prometheus.go
services/turboauth/contracts/turboauth_v1/: CMakeLists.txt  Dockerfile  README_CONTRACT.md  microauth.cpp  microauth.hpp
services/turboroute/: README.md
services/turboroute/backend/: Dockerfile  go.mod  go.sum
services/turboroute/backend/cmd/api/: main.go
services/turboroute/backend/internal/domain/route/: models.go  ports.go  service.go
shared/docs/: architecture.md
(+11 files in other folders)
